fix EqualChunksGatherer NPE on null elements